[package]
name = "shv-http-gateway"
version = "0.4.7"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dev-dependencies]
async-trait = "0.1.89"
shvbroker = "3.31.0"
sse-codec = "0.3.3"
tokio-util = { version = "0.7.18", features = ["compat"] }

[dependencies]
shvproto = "6.1.9"
shvrpc = "16.1.0"
shvclient = { version = "6.0.0", features = ["tokio"] }
rocket = { version = "0.5.1", features = ["tls", "json"] }
tokio = { version = "1.52.3", features = ["net", "time"] }
log = "0.4.30"
url = { version = "2.5.8", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
duration-str = "0.21.0"
base64 = "0.22.1"
rocket_cors = "0.6.0"
const_format = "0.2.36"
simple_logger = { version = "5.2.0", features = ["stderr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rand = { version = "0.10.1", features = ["chacha"] }
getrandom = "0.4.2"

[features]
webspy = []

# [patch."https://github.com/silicon-heaven/libshvclient-rs"]
# shvclient = { path = "../libshvclient-rs" }
#
# [patch."https://github.com/silicon-heaven/libshvproto-rs"]
# shvproto = { path = "../libshvproto-rs" }
#
# [patch."https://github.com/silicon-heaven/libshvrpc-rs"]
# shvrpc = { path = "../libshvrpc-rs" }
